# nrgpt

./: .gitignore  Makefile  README.md  evaluate_nrgpt.py  inference.py  model_config.py  pyproject.toml  run_sweep_wandb.py  train_listops.py  train_nanogpt.py  train_owt_multinode.sh  utils.py
config/: train_owt_config.py
data/listops/: ListOpsDataset_funcs(add_10,max_10,median_10)_depth2_args(2,3)_funcprob0.25_ntrain50000_ntest2000.pkl
data/openwebtext/: prepare.py
listops/: config.py
listops/data/: __init__.py  dataset.py  functions.py  graph.py  tokenizer.py
listops/training/: agent_wandb_ulm.py  evaluator.py  launch_agents.py  train_utils.py
listops/utils/: __init__.py  utils_ulm.py
models/: __init__.py  baselines.py  energy_models.py
sweeps/: LOPS00_listops_training.py  LOPS01_listops_deep.py  OWT00_owt_training.py  SSCL00_shakespeare_scaling.py
